--- a/src/library.html
+++ b/src/library.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cinemania - service for searching films." />
-  <title>Home</title>
+  <title>My Library</title>
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
   <!-- Base styles -->
@@ -16,17 +16,18 @@
 
 <body>
 
-  <include src="./partials/header-home.html"></include>
+  <include src="./partials/header-library.html"></include>
 
   <main>
-    <include src="./partials/hero-home.html"></include>
+
+    <include src="./partials/hero-library.html"></include>
+
   </main>
 
   <include src="./partials/footer.html"></include>
 
-  <!-- Modal empty -->
-  <include src="./partials/modal-empty.html"></include>
-
+  <!-- Modal to one movie -->
+  <include src="./partials/modal-movie.html"></include>
 
   <script type="module" src="./index.js"></script>
 
