--- a/src/library.html
+++ b/src/library.html
@@ -29,7 +29,7 @@
   <!-- Modal to one movie -->
   <include src="./partials/modal-movie.html"></include>
 
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./library.js"></script>
 
 </body>
 
