--- a/src/library.html
+++ b/src/library.html
@@ -15,11 +15,12 @@
 
 <body>
 
-  <include src="./partials/header-library.html"></include>
+  <include src="./partials/header.html"></include>
 
   <main>
 
     <include src="./partials/hero-library.html"></include>
+    <include src="./partials/card-library.html"></include>
 
   </main>
 
@@ -27,6 +28,9 @@
 
   <!-- Modal to one movie -->
   <include src="./partials/modal-movie.html"></include>
+
+  <!-- Modal team -->
+  <include src="./partials/modal-team.html"></include>
 
   <script type="module" src="./library.js"></script>
 
