--- a/src/catalog.html
+++ b/src/catalog.html
@@ -16,11 +16,15 @@
 
 <body>
 
-    <include src="./partials/header-home.html"></include>
+    <include src="./partials/header.html"></include>
 
     <main>
 
-        <include src="./partials/hero-catalog.html"></include>
+        <include src="./partials/hero-home.html"></include>
+        <include src="./partials/seach-catalog.html"></include>
+        <include src="./partials/card-catalog.html"></include>
+        <include src="./partials/pagination-catalog.html"></include>
+
 
     </main>
 
@@ -28,6 +32,9 @@
 
     <!-- Modal to one movie -->
     <include src="./partials/modal-movie.html"></include>
+
+    <!-- Modal team -->
+    <include src="./partials/modal-team.html"></include>
 
     <script type="module" src="./catalog.js"></script>
 
