--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,13 @@
 
 <body>
 
-  <include src="./partials/header-home.html"></include>
+  <include src="./partials/header.html"></include>
 
   <main>
     <include src="./partials/hero-home.html"></include>
+    <include src="./partials/weekly-trends.html"></include>
+    <include src="./partials/upcoming.html"></include>
+
   </main>
 
   <include src="./partials/footer.html"></include>
@@ -27,6 +30,8 @@
   <!-- Modal empty -->
   <include src="./partials/modal-empty.html"></include>
 
+  <!-- Modal team -->
+  <include src="./partials/modal-team.html"></include>
 
   <script type="module" src="./index.js"></script>
 
