--- a/src/library.html
+++ b/src/library.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Cinemania - service for searching films."
+    />
+    <title>My Library</title>
+    <link rel="stylesheet" href="./sass/index.scss" />
+    <!-- Base styles -->
+    <link rel="stylesheet" href="./sass/index.scss" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Cinemania - service for searching films." />
-  <title>My Library</title>
-  <link rel="stylesheet" href="./sass/index.scss" />
-  <!-- Base styles -->
-  <link rel="stylesheet" href="./sass/index.scss" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <body>
+    <script src="./js/setTheme.js"></script>
+    <include src="./partials/header.html"></include>
 
-</head>
+    <main>
+      <include src="./partials/hero-library.html"></include>
+      <include src="./partials/card-library.html"></include>
+    </main>
 
-<body>
+    <include src="./partials/footer.html"></include>
 
-  <include src="./partials/header.html"></include>
+    <!-- Modal to one movie -->
+    <include src="./partials/modal-movie.html"></include>
 
-  <main>
+    <!-- Modal team -->
+    <include src="./partials/modal-team.html"></include>
 
-    <include src="./partials/hero-library.html"></include>
-    <include src="./partials/card-library.html"></include>
-
-  </main>
-
-  <include src="./partials/footer.html"></include>
-
-  <!-- Modal to one movie -->
-  <include src="./partials/modal-movie.html"></include>
-
-  <!-- Modal team -->
-  <include src="./partials/modal-team.html"></include>
-
-  <script type="module" src="./library.js"></script>
-
-</body>
-
+    <script type="module" src="./library.js"></script>
+  </body>
 </html>
