--- a/src/catalog.html
+++ b/src/catalog.html
@@ -7,6 +7,7 @@
       name="description"
       content="Cinemania - service for searching films."
     />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Catalog</title>
     <link rel="stylesheet" href="./sass/index.scss" />
 
@@ -30,10 +31,10 @@
     </main>
     <include src="./partials/footer.html"></include>
 
-  <!-- Modal to one movie -->
-  <include src="./partials/modal-movie.html"></include>
+    <!-- Modal to one movie -->
+    <include src="./partials/modal-movie.html"></include>
 
-  <!-- Modal team -->
+    <!-- Modal team -->
     <include src="./partials/modal-team.html"></include>
 
     <script type="module" src="./catalog.js"></script>
