--- a/src/library.html
+++ b/src/library.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html lang="en" class="dark">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +8,7 @@
       name="description"
       content="Cinemania - service for searching films."
     />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>My Library</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <!-- Base styles -->
@@ -20,7 +20,6 @@
   </head>
 
   <body>
-
     <script src="./js/setTheme.js"></script>
 
     <include src="./partials/header.html"></include>
