--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Cinemania - service for searching films."
     />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Home</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
