--- a/src/library.html
+++ b/src/library.html
@@ -38,5 +38,6 @@
     <include src="./partials/modal-team.html"></include>
 
     <script type="module" src="./library.js"></script>
+    <script type="module" src="./js/card-lbrary.js"></script>
   </body>
 </html>
