--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <!-- Base styles -->
   <link rel="stylesheet" href="./sass/index.scss" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 </head>
 
@@ -34,6 +38,7 @@
   <include src="./partials/modal-team.html"></include>
 
   <script type="module" src="./index.js"></script>
+  <script type="module" src="./js/hero-homepage.js"></script>
 
 </body>
 
