--- a/src/catalog.html
+++ b/src/catalog.html
@@ -33,6 +33,7 @@
 
     <!-- Modal to one movie -->
     <include src="./partials/modal-movie.html"></include>
+      <include src="./partials/hero-modal.html"></include>
 
     <!-- Modal team -->
     <include src="./partials/modal-team.html"></include>
