--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
   
   <!-- Modal to one movie -->
   <include src="./partials/modal-movie.html"></include>
+    <include src="./partials/hero-modal.html"></include>
 
   <!-- Modal empty -->
   <include src="./partials/modal-empty.html"></include>
