--- a/src/catalog.html
+++ b/src/catalog.html
@@ -36,7 +36,7 @@
 
     <!-- Modal team -->
     <include src="./partials/modal-team.html"></include>
-
+    <include src="./partials/widelySeach.html"></include>
     <script type="module" src="./catalog.js"></script>
   </body>
 </html>
