add watch trailer modal

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,11 @@
   
   <!-- Modal to one movie -->
   <include src="./partials/modal-movie.html"></include>
-    <include src="./partials/hero-modal.html"></include>
+  
+  
+    <include src="./partials/hero-trailer.html"></include>
+
+  
 
   <!-- Modal empty -->
   <include src="./partials/modal-empty.html"></include>
