--- a/src/catalog.html
+++ b/src/catalog.html
@@ -35,6 +35,9 @@
     <include src="./partials/modal-movie.html"></include>
       <include src="./partials/hero-modal.html"></include>
 
+    <include src="./partials/hero-trailer.html"></include>
+
+
     <!-- Modal team -->
     <include src="./partials/modal-team.html"></include>
 
